# MCS

./: CMakeLists.txt  README.md  main.cpp
sources/230911_b23/: A.cpp  B.cpp
sources/230912_b23/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
sources/230919_b23/: A.cpp  B.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
sources/230926_b23/: G1b.cpp  G1c.cpp  G1d.cpp  G1e.cpp  G1f.cpp  G1g.cpp  G1j.cpp  G1k.cpp  G1l.cpp  G1m.cpp  G1n.cpp  G2c.cpp  G2d.cpp  G2e.cpp  G2f.cpp  G2g.cpp  G2h.cpp
sources/231003_b23/: A.cpp  B.cpp  E.cpp  H.cpp  J.cpp  K.cpp  L.cpp  M.cpp
sources/231010_b23/: A.cpp  B.cpp  C.cpp  K.cpp  L.cpp  M.cpp
sources/231017_b23/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp
sources/231024_b23/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  K.cpp
sources/231107_b23/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp
sources/231114_b23/: A.cpp  B.cpp  F.cpp  H.cpp  I.cpp
sources/231121_b23/: 0.cpp  A.cpp  B.cpp  D.cpp  F.cpp
sources/231205_b23/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp
sources/231212_b23/: A.cpp  C.cpp  D.cpp  E.cpp
sources/231219_b23/: A.cpp  C.cpp  D.cpp  J.cpp  K.cpp  N.cpp  pref&zfs.cpp
sources/240213_b23/: A.cpp  B.cpp  C.cpp  I.cpp
sources/240227_b23/: B.cpp  E.cpp  I.cpp
sources/240312_b23/: A.pr  B.pr  C.pr  D.pr  I.pr
sources/240326_b23/: D.cpp  E.cpp  F.cpp
